@@ -1,6 +1,6 @@
 77628892cd8b98afcf3c0012480d6a64f2d33286054bd4527102d558f3ec8641  windows_exporter-386.exe
-869a95d2af3e59f54d3a0876227d2236cbc0ab56090f8fe8277c603eee2d4937  windows_exporter-amd64.exe
-38d72838fa5230bd726935c40831c3fb6b832962a89e8d1f8683f477e013bdce  windows_exporter-arm64.exe
+ed0c5c747a965db2066ad5f37492b9eedb81f1299e94c534c11b1eb6bea3fa73  windows_exporter-amd64.exe
+4608137ca21a9f3580233f8fba205936d03ff497423c92c02a66db8de52ef527  windows_exporter-arm64.exe
 28ba8d59aaca84455a6caa03e009adf4067fb0b9bbda6003aa17def38ea02370  node_exporter-1.7.0.darwin-amd64.tar.gz
 f21c69eead923b9762b281788936d11c3276f9505ba20b083f6929487ae8b6bc  node_exporter-1.7.0.darwin-arm64.tar.gz
 fa662462d5bf69895b64a1efaabfab2ce0b6fa8962e960cb6a5277fa394d5c2d  node_exporter-1.7.0.linux-386.tar.gz
